--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="/public/images/logo.jpeg"
+      href="/images/logo.jpeg"
       class="img-fluid"
     />
     <title>Soft&Tech Consulting</title>
@@ -33,7 +33,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
           <img
-            src="/public/images/logo.jpeg"
+            src="/images/logo.jpeg"
             alt="Soft$Tech Consulting Logo"
             class="img-fluid"
           />
@@ -117,7 +117,7 @@
         <div class="row">
           <div class="col-md-12">
             <video
-              src="/public/video/fondo.mp4"
+              src="/video/fondo.mp4"
               alt="Intro Video"
               width="100%"
               height="100%"
@@ -140,7 +140,7 @@
         <div class="row flex-wrap">
           <div class="col-md-6">
             <img
-              src="/public/images/monitor.jpg"
+              src="/images/monitor.jpg"
               alt="Nosotros Image"
               class="img-fluid"
             />
@@ -189,7 +189,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="/public/images/diseño-web.jpg"
+                    src="/images/diseño-web.jpg"
                     alt="Diseño Web"
                     class="img-fluid"
                   />
@@ -205,7 +205,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/public/images/ing-req.jpg"
+                    src="/images/ing-req.jpg"
                     alt="Ingeniería de Requisitos"
                     class="img-fluid"
                   />
@@ -221,7 +221,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/public/images/migraciones.jpg"
+                    src="/images/migraciones.jpg"
                     alt="Migraciones de Data"
                     class="img-fluid"
                   />
@@ -271,7 +271,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-6">
             <img
-              src="/public/images/page.jpeg"
+              src="/images/page.jpeg"
               alt="Diseño Web Detalle"
               width="100%"
               height="500"
@@ -288,7 +288,7 @@
         <div class="row">
           <div class="col-12 col-sm-6 col-md-6">
             <img
-              src="/public/images/aplicaciones.jpg"
+              src="/images/aplicaciones.jpg"
               alt="Desarrollo de Apps Detalle"
               width="100%"
               height="500"
@@ -318,7 +318,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-6">
             <img
-              src="/public/images/analisis.jpg"
+              src="/images/analisis.jpg"
               alt="Ingeniería de Requisitos Detalle"
               width="100%"
               height="500"
@@ -334,7 +334,7 @@
         <div class="row">
           <div class="col-12 col-sm-6 col-md-6">
             <img
-              src="/public/images/test-soft.jpeg"
+              src="/images/test-soft.jpeg"
               alt="Testing Detalle"
               width="100%"
               height="500"
@@ -365,7 +365,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-6">
             <img
-              src="/public/images/migraciones.jpeg"
+              src="/images/migraciones.jpeg"
               alt="Migraciones de Data Detalle"
               width="100%"
               height="500"
@@ -387,7 +387,7 @@
           <div class="col-12 col-sm-6 col-md-6">
             <div class="video-background">
               <video autoplay loop muted>
-                <source src="/public/video/contacto.mp4" type="video/mp4" />
+                <source src="/video/contacto.mp4" type="video/mp4" />
               </video>
             </div>
           </div>
