--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/public/images/software.jpg"
+                    src="/images/software.jpg"
                     alt="Desarrollo de Apps"
                     class="img-fluid"
                   />
@@ -213,7 +213,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/public/images/testing.jpg"
+                    src="/images/testing.jpg"
                     alt="Testing"
                     class="img-fluid"
                   />
@@ -287,6 +287,7 @@
       <section id="desarrollo-apps">
         <div class="row">
           <div class="col-12 col-sm-6 col-md-6">
+            <
             <img
               src="/images/aplicaciones.jpg"
               alt="Desarrollo de Apps Detalle"
@@ -427,7 +428,7 @@
                   type="tel"
                   class="form-control"
                   id="telefono"
-                  placeholder="Ingrese su N° de Teléfono"
+                  placeholder="Ingrese su N de Teléfono"
                 />
               </div>
               <button type="submit" class="btn btn-primary w-100">
