--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="/images/logo.jpeg"
+      href="images/logo.jpeg"
       class="img-fluid"
     />
     <title>Soft&Tech Consulting</title>
@@ -33,7 +33,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
           <img
-            src="/images/logo.jpeg"
+            src="images/logo.jpeg"
             alt="Soft$Tech Consulting Logo"
             class="img-fluid"
           />
@@ -117,7 +117,7 @@
         <div class="row">
           <div class="col-md-12">
             <video
-              src="/video/fondo.mp4"
+              src="video/fondo.mp4"
               alt="Intro Video"
               width="100%"
               height="100%"
@@ -140,7 +140,7 @@
         <div class="row flex-wrap">
           <div class="col-md-6">
             <img
-              src="/images/monitor.jpg"
+              src="images/monitor.jpg"
               alt="Nosotros Image"
               class="img-fluid"
             />
@@ -189,7 +189,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="/images/diseño-web.jpg"
+                    src="images/diseño-web.jpg"
                     alt="Diseño Web"
                     class="img-fluid"
                   />
@@ -197,7 +197,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/images/software.jpg"
+                    src="images/software.jpg"
                     alt="Desarrollo de Apps"
                     class="img-fluid"
                   />
@@ -205,7 +205,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/images/ing-req.jpg"
+                    src="images/ing-req.jpg"
                     alt="Ingeniería de Requisitos"
                     class="img-fluid"
                   />
@@ -213,7 +213,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/images/testing.jpg"
+                    src="images/testing.jpg"
                     alt="Testing"
                     class="img-fluid"
                   />
@@ -221,7 +221,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/images/migraciones.jpg"
+                    src="images/migraciones.jpg"
                     alt="Migraciones de Data"
                     class="img-fluid"
                   />
