--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-6">
             <img
-              src="/images/page.jpeg"
+              src="images/page.jpeg"
               alt="Diseño Web Detalle"
               width="100%"
               height="500"
@@ -289,7 +289,7 @@
           <div class="col-12 col-sm-6 col-md-6">
             <
             <img
-              src="/images/aplicaciones.jpg"
+              src="images/aplicaciones.jpg"
               alt="Desarrollo de Apps Detalle"
               width="100%"
               height="500"
@@ -319,7 +319,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-6">
             <img
-              src="/images/analisis.jpg"
+              src="images/analisis.jpg"
               alt="Ingeniería de Requisitos Detalle"
               width="100%"
               height="500"
@@ -335,7 +335,7 @@
         <div class="row">
           <div class="col-12 col-sm-6 col-md-6">
             <img
-              src="/images/test-soft.jpeg"
+              src="images/test-soft.jpeg"
               alt="Testing Detalle"
               width="100%"
               height="500"
@@ -366,7 +366,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-6">
             <img
-              src="/images/migraciones.jpeg"
+              src="images/migraciones.jpeg"
               alt="Migraciones de Data Detalle"
               width="100%"
               height="500"
@@ -388,7 +388,7 @@
           <div class="col-12 col-sm-6 col-md-6">
             <div class="video-background">
               <video autoplay loop muted>
-                <source src="/video/contacto.mp4" type="video/mp4" />
+                <source src="video/contacto.mp4" type="video/mp4" />
               </video>
             </div>
           </div>
